<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_medium_2"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="mm.com.capps.ezyyay.buyer.activities.ResetPasswordActivity">

        <TextView
            android:id="@+id/tv_reset_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial"
            android:text="@string/lbl_your_result"
            android:textSize="@dimen/text_regular_3x"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rest_pw_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:fontFamily="@font/questrial"
            android:text="@string/txt_bmi_bmr_txt"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reset_pw" />


        <EditText
            android:id="@+id/et_bmi_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:drawableStart="@drawable/ic_bathroom_scale"
            android:drawablePadding="@dimen/margin_medium_2"
            android:enabled="false"
            android:fontFamily="@font/questrial"
            android:hint="@string/lbl_bmi"
            android:textColor="@color/black_full"
            android:textColorHint="@color/divider"
            android:textSize="@dimen/text_regular_2x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rest_pw_text"
            app:passwordToggleEnabled="true" />

        <TextView
            android:id="@+id/tv_bmi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:fontFamily="@font/questrial"
            android:text="@string/txt_bmi_bmr_txt"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_bmi_result" />

        <EditText
            android:id="@+id/et_bmr_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:drawableStart="@drawable/ic_bathroom_scale"
            android:drawablePadding="@dimen/margin_medium_2"
            android:enabled="false"
            android:fontFamily="@font/questrial"
            android:hint="@string/lbl_bmr"
            android:textColor="@color/black_full"
            android:textColorHint="@color/divider"
            android:textSize="@dimen/text_regular_2x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bmi_text"
            app:passwordToggleEnabled="true" />


        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:fontFamily="@font/questrial"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_bmr_result" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="@string/lbl_ok"
            android:textSize="@dimen/text_regular_2x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_result" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
